--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
-
-/* Your CSS Code here. */
+main{
+	width:200px;
+	background-color: purple;
+	border-left-color: green;
+	border-left-width: 5px;
+	padding: 10px 10px 10px 10px;
+}
+h1{
+	font-size:20px;
+	color: white;
+	text-decoration:underline;
+}
