--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-main{
+.main{
 	width:200px;
-	background-color: purple;
-	border-left-color: green;
-	border-left-width: 5px;
-	padding: 10px 10px 10px 10px;
+	background-color:purple;
+	border-left:5px solid green;
+	padding:10px 10px 10px 10px;
 }
-heading{
+#heading{
 	font-size:20px;
-	color: white;
-	text-decoration:underline;
+	color:white;
 }
